# algotard

./: environment.yml  pyproject.toml
src/algotard/ideas/biotech/: data_dict.pkl  historical-catalyst-calendar.csv  historical-catalyst-calendar.json  research1.ipynb
src/algotard/scripts/: email_utils.py  get_data.py  rsi_strategy.py
